# shadow-deploy

./: .gitignore  docker-compose.yaml
code-with-quarkus/: .project
code-with-quarkus/src/main/java/org/acme/: GreetingResource.java
new_payment/: .gitignore  Cargo.toml  Dockerfile
new_payment/src/: main.rs
old_payment/: .gitignore  README.md  pom.xml
old_payment/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
old_payment/src/main/java/com/albugowy15/: BadRequestExceptionMapper.java  FruitResource.java  GreetingResource.java  UserResource.java
old_payment/src/main/java/com/albugowy15/application/user/: UserController.java  UserService.java
old_payment/src/main/java/com/albugowy15/application/user/dto/: LoginUserRequestDto.java  LoginUserResponseDto.java  RegisterUserRequestDto.java  UserResponseDto.java
old_payment/src/main/java/com/albugowy15/domain/entity/: UserEntity.java
old_payment/src/main/java/com/albugowy15/domain/repository/: UserRepository.java
old_payment/src/main/java/com/albugowy15/dtos/: RegisterUserDto.java
old_payment/src/main/java/com/albugowy15/entities/: UserEntity.java
old_payment/src/main/java/com/albugowy15/repositories/: UserRepository.java
old_payment/src/main/java/com/albugowy15/shared/common/: ApiResponse.java  ApplicationException.java  RequestValidationException.java
old_payment/src/main/resources/: application.properties
old_payment/src/test/java/com/albugowy15/: GreetingResourceIT.java  GreetingResourceTest.java
